--- a/src/components/head_home/Header.css
+++ b/src/components/head_home/Header.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: row;
     height: 667px;
-    z-index: -2;
     position: relative;
+    padding-top: 50px;
 }
 
 .left__part{
@@ -48,7 +48,6 @@
     color: white;
 }
 
-
 li{
     display: inline;
 }
@@ -74,7 +73,6 @@ ul{
 }
 
 .coctail__img{
-    margin-top: 25px;
     height: 89%;
     width: 120%;
     border: rgba(187, 5, 57, 0.575) dashed 3px;
