--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -5,6 +5,7 @@
 .first{
  grid-column: 3/6;
  grid-row: 1/3;
+ cursor: pointer;
 }
 
 .item{
@@ -18,8 +19,13 @@
     width: 18vw;
 }
 
+.span_item{
+    padding-top: 5px;
+    padding-bottom: 50px;
+}
+
 .img_first{
-    height: 80vh;
+    height: 87vh;
     padding: 10px;
 }
 @media (max-width : 992px)
@@ -53,5 +59,4 @@
 .button_seeAll{
     font-size: 13px;
     padding: 13px 40px;
-    margin-top: 50px;
 }
