--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -2,11 +2,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr 4fr 1fr 2fr;
     align-items: baseline; 
+    padding: 0px;
     padding-top: 25px;
-}
-
-a{
-    cursor: pointer;
+    
 }
 
 .logo{
@@ -22,6 +20,7 @@ a{
 
 .menu__item{
     font-size: 14px;
+    cursor: pointer;
 }
 
 .menu__item__active{
