--- a/src/components/circle_element/Circle_element.css
+++ b/src/components/circle_element/Circle_element.css
@@ -2,17 +2,34 @@
     margin-top: 50px;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .circle{
     width: 200px;
     height: 200px;
     object-fit: cover;
-    margin: 2px;
     border-radius: 6rem;
+    margin: auto;
 }
 
 .div_circle{
-    margin-top: 50px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    
+}
+
+.circle_element{
+    display: flex;
+    flex-direction: column;
+    justify-content: center !important;
+}
+
+.circle_skils{
+    padding: 0px 30px;
+}
+
+.circle_logo{
+    font-size: 25px;
+    padding: 10px 0px;
 }
